fix align logo

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,6 @@
 main {
   padding-top: 90px;
 }
+section {
+  overflow: hidden;
+}
